--- a/adventure_net/equipment_accounting/templates/equipment_accounting/add_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/add_equipment.html
@@ -12,8 +12,8 @@
       <span>{{ form.errors.equipment_name }}</span>
     </div>
 
-    <div>
-      <label>
+    <div class="pole">
+      <label class="pole__label">
         Choose equipment category:
         <select class="pole__input" name="categories" required>
           {% for category in categories %}
