--- a/adventure_net/equipment_accounting/templates/equipment_accounting/get_book_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/get_book_equipment.html
@@ -9,11 +9,11 @@
 
 <ul class="list" >
     {% for book_equipment in book_equipments %}
-    <li class="items">
+    <li class="items items-left">
       Заброньовано з {{book_equipment.booking_date_from}} по {{book_equipment.booking_date_to}} 
       
-      <div class="buttons">
-      <a class="link" href="{% url 'equipment:cancel_equipment_reservation' book_equipment.id %}" role="button" class="contrast"><button class="btn" type="button"> Delete</button></a>
+      <div class="buttons buttons-right">
+      <a class="link" href="{% url 'equipment:cancel_equipment_reservation' book_equipment.id %}" role="button" class="contrast"><button class="btn btn-right" type="button"> Delete</button></a>
 
     
     </div>
