--- a/adventure_net/users/templates/users/main.html
+++ b/adventure_net/users/templates/users/main.html
@@ -2,7 +2,9 @@
 {% block title %} checker {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
-{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+{% block stylesheets %}{% endblock stylesheets %} 
+
+{% block content %}
 <div class="modal">
   <h1>{{ msg }}</h1>
 </div>
