--- a/adventure_net/equipment_accounting/templates/equipment_accounting/get_book_equipment.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/get_book_equipment.html
@@ -3,23 +3,31 @@
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
+
+
 <div class="modal">
-
-
-
+  
 <ul class="list" >
     {% for book_equipment in book_equipments %}
     <li class="items items-left">
-      Заброньовано з {{book_equipment.booking_date_from}} по {{book_equipment.booking_date_to}} 
+      Заброньовано з {{ book_equipment.booking_date_from }} по {{ book_equipment.booking_date_to }} - {{ book_equipment.club_member }}
       
+      {% if request.user == book_equipment.club_member %}
       <div class="buttons buttons-right">
-      <a class="link" href="{% url 'equipment:cancel_equipment_reservation' book_equipment.id %}" role="button" class="contrast"><button class="btn btn-right" type="button"> Delete</button></a>
-
-    
-    </div>
+        <a class="link" href="{% url 'equipment:cancel_equipment_reservation' book_equipment.id %}" role="button" class="contrast">
+          <button class="btn btn-right" type="button">Delete</button>
+        </a>
+      </div>
+      {% endif %}
+      
     </li>
     {% endfor %}
   </ul>
+  <div class="buttons buttons-right">
+    <a class="link" href="{% url 'equipment:book_equipment' equipment.id %}" role="button" class="contrast">
+      <button class="btn btn-right" type="button">Book</button>
+    </a>
+  </div>
 </div>
 
 {% endblock content %}
