User Account Management
Added function for changing username and password, implemented user deletion capability, and fixed avatar saving.

--- a/adventure_net/users/templates/users/change_profile.html
+++ b/adventure_net/users/templates/users/change_profile.html
@@ -4,7 +4,21 @@
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %}
 {% block content %}
+
+{% if form.errors %}
+  <div class="alert alert-danger">
+    <ul>
+    {% for field in form %}
+      {% for error in field.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+    {% endfor %}
+    </ul>
+  </div>
+{% endif %}
+
   <form method="POST" enctype="multipart/form-data">
+
     {% csrf_token %}
     <div class="modal">
 
