--- a/adventure_net/users/templates/users/delete_user.html
+++ b/adventure_net/users/templates/users/delete_user.html
@@ -8,10 +8,10 @@
 <form method="post">
     {% csrf_token %}
     <div class="modal">
-<label class="pole__label">Do you want to delete this user position?</label>
+<label class="pole__label">Do you want to delete this user?</label>
 <div class="buttons" >
 <button class="btn" type="submit">Submit</button>
-<button type="reset" class="btn"><a class="link link-btn" href="{% url 'users:get_user_position' %}" role="button" > No </a></button>
+<button type="reset" class="btn"><a class="link link-btn" href="{% url 'users:club_members' %}" role="button" > No </a></button>
 </div>
 </div>
 </form>
